--- a/src/components/calculator/Calculator.css
+++ b/src/components/calculator/Calculator.css
@@ -1,23 +1,21 @@
 .calculator {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid #d9d9d9;
-    border-radius: 5px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-    padding: 20px;
-    background-color: darkgray;
-    width: 40%;
-    margin: auto;
-    margin-top: 80px;
-    line-height: 50px;
-    width: 350px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #d9d9d9;
+  border-radius: 5px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  padding: 20px;
+  background-color: darkgray;
+  width: 320px;
+  margin-top: 20px;
+  margin-left: 30px;
+  line-height: 50px;
+}
   .content {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    margin-top: 20px;
+    padding: 5px;
   }
   
   .display {
@@ -32,11 +30,13 @@
     background-color: #fff;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     line-height: 40px;
+    overflow-x: auto;
   }
   
   .result{
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bold;
+    height: 
   }
   
   .operate {
